--- a/docker/tools.yaml
+++ b/docker/tools.yaml
@@ -2,6 +2,8 @@
 api_key: admin
 galaxy_instance: http://localhost:8080
 tool_shed_url: https://toolshed.g2.bx.psu.edu/
+install_resolver_dependencies: True
+install_tool_dependencies: True
 tools:
 - name: xy_plot
   owner: devteam
